<resources>
    <string name="app_name">CashRegisterApp</string>
    <string name="AHRTextView">NO HISTORY TO SHOW</string>

    <string name="Btn0_value">0</string>
    <string name="Btn1_value">1</string>
    <string name="Btn2_value">2</string>
    <string name="Btn3_value">3</string>
    <string name="Btn4_value">4</string>
    <string name="Btn5_value">5</string>
    <string name="Btn6_value">6</string>
    <string name="Btn7_value">7</string>
    <string name="Btn8_value">8</string>
    <string name="Btn9_value">9</string>

    <string name="BtnClear_value">C</string>
    <string name="Prod_TV_Text">Product Type</string>

    <string name="Mng_Bnt">MANAGER</string>
    <string name="history_Bnt">HISTORY</string>
    <string name="restock_Bnt">RESTOCK</string>

    <string name="EditText_text">Enter New Quantity</string>

    <string name="Restock_OK_Btn">OK</string>
    <string name="Restock_Cancel_Btn">Cancel</string>

</resources>